# snes9x-gtk

./: ProjectHome.md  Source.md  bsx.cpp  cpu.cpp  cpuexec.cpp  cpumacro.h  cpuops.cpp  crosshairs.h  debug.cpp  debug.h  dma.cpp  fxdbg.cpp  memmap.cpp  obc1.cpp  port.h  ppu.cpp  ppu.h  sa1.cpp  seta.cpp  seta011.cpp  seta018.cpp  snapshot.cpp  snapshot.h  snes9x.cpp  snes9x.h  spc7110.cpp  spc7110emu.cpp  srtc.cpp  tile.cpp
apu/: apu.cpp  apu.h  resampler.h  ring_buffer.h
branches/1.51/: port.h
branches/1.51/gtk/: AUTHORS
branches/1.51/gtk/doc/: README
branches/1.51/gtk/src/: filter_hq2x.cpp  gtk_audio_mixer.cpp  gtk_control.cpp  gtk_display_driver_opengl.h  gtk_file.cpp  gtk_glade_window.cpp  gtk_preferences.h  gtk_s9x.cpp  gtk_sound_driver.h  gtk_sound_driver_oss.h  gtk_sound_driver_portaudio.cpp  gtk_sound_driver_sdl.cpp  gtk_sound_driver_sdl.h  sourcify.c
branches/apu/: controls.cpp  cpuexec.cpp  cpuops.cpp  dma.cpp  dsp.cpp  dsp1.cpp  dsp2.cpp  dsp3.cpp  dsp4.cpp  gfx.cpp  gfx.h  globals.cpp  memmap.cpp  obc1.h  ppu.cpp  sdd1.cpp  seta.h  seta010.cpp  snapshot.cpp
branches/apu/apu/: apu.cpp  apu.h  resampler.h
branches/apu/filter/: 2xsai.cpp  2xsai.h  blit.cpp  blit.h  hq2x.h
branches/apu/gtk/: '  Makefile  Makefile.am  Makefile.in  aclocal.m4  configure.ac
branches/apu/gtk/po/: Makefile  fr_FR.gmo
branches/apu/gtk/src/: gtk_audio_mixer.cpp  gtk_config.cpp  gtk_config.h  gtk_display.cpp  gtk_glade.cpp  gtk_preferences.cpp  gtk_s9x.cpp  gtk_s9x.h  gtk_s9xwindow.cpp  gtk_s9xwindow.h  gtk_sound.h  gtk_sound_driver_oss.cpp  gtk_sound_driver_oss.h  gtk_sound_driver_portaudio.cpp  gtk_sound_driver_portaudio.h  snes9x.glade  sourcify
branches/apu/macosx/: Info-Snes9x_x86_Leopard.plist  mac-cocoatools.h  mac-cocoatools.mm  mac-dialog.h  mac-file.cpp  mac-file.h  mac-musicbox.cpp  mac-musicbox.h  mac-quicktime.cpp  mac-render.cpp  mac-render.h  mac-snes9x.h
branches/apu/macosx/dsptest.xcodeproj/: tony.mode1  tony.mode1v3  tony.pbxuser  zones.pbxuser
branches/merge/: apu.cpp  apu.h  apudebug.cpp  apumem.h  conffile.cpp  conffile.h  controls.cpp  cpu.cpp  cpuexec.cpp  cpuops.cpp  debug.cpp  display.h  dma.cpp  dsp4.cpp  fxinst.h  gfx.cpp  globals.cpp  loadzip.cpp  logger.cpp  memmap.cpp  movie.cpp  netplay.cpp  port.h  ppu.cpp  screenshot.cpp  server.cpp  snapshot.cpp  snes9x.cpp  soundux.cpp  soundux.h  spc700.cpp  spc700.h  spc7110emu.cpp
branches/merge/apu/: SNES_SPC.cpp  SNES_SPC.h  SNES_SPC_misc.cpp  SNES_SPC_state.cpp  apu.cpp  apu.h  linear_resampler.h  resampler.h
branches/merge/docs/: changes.txt  control-inputs.txt  porting.html  snapshots.txt  snes9x-license.txt  snes9x.conf.default
branches/merge/filter/: 2xsai.cpp  2xsai.h  blit.cpp  blit.h  epx.cpp  hq2x.cpp  hq2x.h  snes_ntsc_impl.h
branches/merge/gtk/: AUTHORS  Makefile.am  autogen.sh  configure  configure.ac
branches/merge/gtk/data/: Makefile.am
branches/merge/macosx/: mac-appleevent.h  mac-audio.cpp  mac-audio.h  mac-cart.cpp  mac-cheat.cpp  mac-cheat.h  mac-cheatfinder.cpp  mac-client.cpp  mac-client.h  mac-cocoatools.mm  mac-controls.h  mac-coreimage.h  mac-coreimage.mm  mac-dialog.h  mac-global_prefix.h  mac-gworld.cpp  mac-joypad.cpp  mac-joypad.h  mac-keyboard.cpp  mac-multicart.cpp  mac-multicart.h  mac-musicbox.cpp  mac-netplay.h  mac-os.cpp  mac-os.h  mac-prefix.h  mac-prefs.cpp  mac-quicktime.cpp  mac-quicktime.h  mac-render.cpp  mac-screenshot.cpp  mac-screenshot.h  mac-snes9x.cpp  mac-stringtools.cpp  mac-stringtools.h
branches/merge/unix/: Makefile.in  unix.cpp  x11.cpp
branches/merge/unzip/: unzip.c
docs/: changes.txt
filter/: epx.cpp  epx.h
gtk/: Makefile.am  Makefile.in  configure.ac
gtk/data/: Makefile  Makefile.am  Makefile.in
gtk/po/: Makefile.in  fr_FR.po
gtk/src/: gtk_audio_mixer.cpp  gtk_audio_mixer.h  gtk_builder_window.cpp  gtk_config.cpp  gtk_config.h  gtk_control.h  gtk_display.cpp  gtk_display.h  gtk_display_driver_gtk.cpp  gtk_display_driver_opengl.cpp  gtk_display_driver_opengl.h  gtk_display_driver_xv.cpp  gtk_file.cpp  gtk_file.h  gtk_glade_window.h  gtk_preferences.cpp  gtk_preferences.h  gtk_s9x.cpp  gtk_s9x.h  gtk_s9xcore.h  gtk_s9xwindow.cpp  gtk_s9xwindow.h  gtk_sound.cpp  gtk_sound.h  gtk_sound_driver_oss.cpp  gtk_sound_driver_oss.h  gtk_sound_driver_sdl.cpp  snes9x.glade
jma/: portable.h  s9x-jma.cpp
macosx/: mac-appleevent.cpp  mac-audio.cpp  mac-audio.h  mac-cart.cpp  mac-cart.h  mac-cheatfinder.cpp  mac-cheatfinder.h  mac-controls.cpp  mac-coreimage.mm  mac-dialog.cpp  mac-global_prefix.h  mac-gworld.h  mac-joypad.cpp  mac-keyboard.h  mac-multicart.cpp  mac-netplay.cpp  mac-os.cpp  mac-prefs.cpp  mac-prefs.h  mac-screenshot.cpp  mac-server.cpp  mac-server.h  mac-snes9x.cpp  mac-stringtools.cpp  mac-stringtools.h
macosx/English.lproj/: InfoPlist.strings  Localizable.strings
macosx/English.lproj/Snes9x.nib/: objects.xib
macosx/dsptest.xcodeproj/: project.pbxproj  zones.mode1v3
tags/1.51.66/gtk/: configure.ac
tags/1.51.67/gtk/: autogen.sh
tags/1.51.68/trunk/: netplay.cpp
tags/1.51.71/: server.cpp
tags/1.51.71/gtk/: Makefile.am  aclocal.m4  configure.ac
tags/1.51.74/: snapshot.cpp
trunk/: gfx.h
trunk/gtk/: Makefile.am  Makefile.in  autogen.sh  configure.ac
trunk/gtk/data/: Makefile.am  Makefile.in
trunk/gtk/po/: es_VE.po  fr_FR.po
trunk/gtk/src/: gtk_audio_mixer.cpp  gtk_audio_mixer.h  gtk_builder_window.cpp  gtk_cheat.cpp  gtk_config.cpp  gtk_config.h  gtk_control.h  gtk_display.cpp  gtk_display.h  gtk_display_driver.h  gtk_display_driver_gtk.cpp  gtk_display_driver_gtk.h  gtk_display_driver_opengl.cpp  gtk_display_driver_opengl.h  gtk_display_driver_xv.cpp  gtk_display_driver_xv.h  gtk_file.cpp  gtk_icon.h  gtk_netplay.cpp  gtk_netplay_dialog.cpp  gtk_preferences.cpp  gtk_s9x.cpp  gtk_s9x.h  gtk_s9xwindow.cpp  gtk_s9xwindow.h  gtk_sound.cpp  gtk_sound.h  gtk_sound_driver_oss.cpp  gtk_sound_driver_portaudio.cpp  gtk_sound_driver_sdl.cpp  gtk_sound_driver_sdl.h  snes9x.glade  snes9x.ui
trunk/macosx/snes9x.xcodeproj/: project.pbxproj
unix/: unix.cpp
wiki/: Source.wiki
(+109 files in other folders)
